--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 REACT_APP_API_KEY=927296058e3b9fb24bb92f9b8d40cbdb
-REACT_APP_LOCATION_API_KEY=4HAFAfqkAzUWEz8dnqeJypf0LGtUl8GN
+REACT_APP_LOCATION_API_KEY=f4e9ba908bmshca4c47221752125p113141jsnfffba6208f9e
+REACT_APP_HOST=referential.p.rapidapi.com
