--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-icons": "^4.6.0",
     "react-loading-skeleton": "^3.1.0",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.7",
     "sass": "^1.56.1",
     "web-vitals": "^2.1.4"
   },
